@@ -46,13 +46,15 @@ import org.apache.ignite.internal.util.typedef.F;
 import org.apache.ignite.internal.util.typedef.internal.U;
 import org.apache.ignite.lang.IgniteBiTuple;
 import org.apache.ignite.testframework.junits.common.GridCommonAbstractTest;
+import org.junit.Ignore;
+import org.junit.Test;
 
 /**
  * Test of integration with Hadoop client via command line interface.
  */
 public class HadoopCommandLineTest extends GridCommonAbstractTest {
     /** IGFS instance. */
-    private IgfsEx igfs;
+    private static IgfsEx igfs;
 
     /** */
     private static final String igfsName = "igfs";
@@ -144,10 +146,8 @@ public class HadoopCommandLineTest extends GridCommonAbstractTest {
         }
     }
 
-    /** {@inheritDoc} */
-    @Override protected void beforeTestsStarted() throws Exception {
-        super.beforeTestsStarted();
-
+    /** */
+    private void beforeHadoopCommandLineTest() throws Exception {
         hiveHome = IgniteSystemProperties.getString("HIVE_HOME");
 
         assertFalse("HIVE_HOME hasn't been set.", F.isEmpty(hiveHome));
@@ -211,13 +211,15 @@ public class HadoopCommandLineTest extends GridCommonAbstractTest {
         return path != null ? path : U.resolveIgnitePath("config/hadoop/" + name);
     }
 
-    /** {@inheritDoc} */
-    @Override protected void afterTestsStopped() throws Exception {
+    /** */
+    private void afterHadoopCommandLineTest() {
         U.delete(testWorkDir);
     }
 
     /** {@inheritDoc} */
     @Override protected void beforeTest() throws Exception {
+        beforeHadoopCommandLineTest();
+
         String cfgPath = "config/hadoop/default-config.xml";
 
         IgniteBiTuple<IgniteConfiguration, GridSpringResourceContext> tup = IgnitionEx.loadConfiguration(cfgPath);
@@ -230,8 +232,10 @@ public class HadoopCommandLineTest extends GridCommonAbstractTest {
     }
 
     /** {@inheritDoc} */
-    @Override protected void afterTest() throws Exception {
+    @Override protected void afterTest() {
         stopAllGrids(true);
+
+        afterHadoopCommandLineTest();
     }
 
     /**
@@ -250,11 +254,33 @@ public class HadoopCommandLineTest extends GridCommonAbstractTest {
         res.environment().put("HADOOP_HOME", hadoopHome);
         res.environment().put("HADOOP_CLASSPATH", ggClsPath);
         res.environment().put("HADOOP_CONF_DIR", testWorkDir.getAbsolutePath());
+        res.environment().put("HADOOP_OPTS", filteredJvmArgs());
 
         res.redirectErrorStream(true);
 
         return res;
     }
+
+    /**
+     * Creates list of JVM arguments to be used to start hadoop process.
+     *
+     * @return JVM arguments.
+     */
+    private String filteredJvmArgs() {
+        StringBuilder filteredJvmArgs = new StringBuilder();
+
+        filteredJvmArgs.append("-ea");
+
+        for (String arg : U.jvmArgs()) {
+            if (arg.startsWith("--add-opens") || arg.startsWith("--add-exports") || arg.startsWith("--add-modules") ||
+                arg.startsWith("--patch-module") || arg.startsWith("--add-reads") ||
+                arg.startsWith("-XX:+IgnoreUnrecognizedVMOptions"))
+                filteredJvmArgs.append(' ').append(arg);
+        }
+
+        return filteredJvmArgs.toString();
+    }
+
 
     /**
      * Waits for process exit and prints the its output.
@@ -332,6 +358,7 @@ public class HadoopCommandLineTest extends GridCommonAbstractTest {
     /**
      * Tests Hadoop command line integration.
      */
+    @Test
     public void testHadoopCommandLine() throws Exception {
         assertEquals(0, executeHadoopCmd("fs", "-ls", "/"));
 
@@ -408,6 +435,8 @@ public class HadoopCommandLineTest extends GridCommonAbstractTest {
     /**
      * Tests Hive integration.
      */
+    @Ignore("https://issues.apache.org/jira/browse/IGNITE-9920")
+    @Test
     public void testHiveCommandLine() throws Exception {
         assertEquals(0, executeHiveQuery(
             "create table table_a (" +
